--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -31,3 +31,18 @@ jobs:
           OPENCODE_API_KEY: ${{ secrets.OPENCODE_API_KEY }}
         with:
           model: opencode/big-pickle
+      
+      - name: Check Workflow Status
+        id: check
+        uses: ClownBin/action-checkstatus@main
+        with:
+          # 可选：在当前运行已完成且结果不是 success 时让步骤失败
+          fail-on-non-success: "true"
+          # 可选：自定义 token，不填则默认使用 GITHUB_TOKEN
+          # github-token: ${{ secrets.MY_PAT }}
+
+      - name: Echo result
+        run: |
+          echo "Run ID: ${{ steps.check.outputs['run-id'] }}"
+          echo "Status: ${{ steps.check.outputs.status }}"
+          echo "Conclusion: ${{ steps.check.outputs.conclusion }}"
