Update echo command to use github.action

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -26,4 +26,4 @@ jobs:
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
-      run: echo "hello world,hello-workflow1, ${{ github }}"
+      run: echo "hello world,hello-workflow1, ${{ github.action }}"
